--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="form-group mb-2">
             <label for="itame-name" class="fw-bold h5">Item price</label>
-            <input type="number" class="form-control" id="itame-price" />
+            <input type="text" class="form-control" id="itame-price" />
           </div>
           <button type="submit" class="btn btn-primary mb-2 fw-bold">
             Add to List
