--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ZAN Tech Invoice Bill</title>
-    <link rel="icon" type="image/x-icon" href="codingboss.png">
+    <link rel="icon" type="image/x-icon" href="codingboss.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,11 +32,15 @@
             <input type="text" class="form-control" id="customer-name" />
           </div>
           <div class="form-group mb-2">
-            <label for="coustomer-phone" class="fw-bold h5">Customer Number</label>
+            <label for="coustomer-phone" class="fw-bold h5"
+              >Customer Number</label
+            >
             <input type="text" class="form-control" id="customer-phone" />
           </div>
           <div class="form-group mb-2">
-            <label for="delivery-address" class="fw-bold h5">Delivery Address</label>
+            <label for="delivery-address" class="fw-bold h5"
+              >Delivery Address</label
+            >
             <input type="text" class="form-control" id="delivery-address" />
           </div>
           <div class="form-group mb-2">
@@ -71,12 +75,14 @@
             <tr>
               <th>Item Name</th>
               <th>Item Quantity</th>
-              <th>Itame price</th>
-              <th>Total Item price</th>
+              <th>Item Price</th>
+              <th>Total Item Price</th>
               <th>Action</th>
             </tr>
           </thead>
-          <tbody></tbody>
+          <tbody>
+            <!-- Table rows for items will be dynamically added here -->
+          </tbody>
         </table>
         <p id="total-cost">Total Cost: 0 TK</p>
         <button class="btn btn-success" id="generated-invoice">
@@ -86,20 +92,19 @@
     </div>
 
     <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
-    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+      integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
     <script
-    sec="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      sec="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     ></script>
     <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
   </body>
 </html>
-
